...
                             address: L10n.Placeholder.address,
                             city: L10n.Placeholder.city,
                             state: L10n.Placeholder.state,
                             zip: L10n.Placeholder.zip,
                             items: [orderItem])

    static let orderItem = OrderItem(name: "T-shirt",
                                     image: "tshirt-9E8A8A",
                                     color: "Dusty Gray",
                                     size: "M",
                                     price: 1200,
                                     discount: 240,
                                     quantity: 1)

    static func products() -> [Product] {
...
                    "hex": "9E8A8A",
                    "image": "tshirt-9E8A8A",
                    "updatedAt": "2023-04-11T00:00:00Z",
                    "createdAt": "2023-04-11T00:00:00Z"
                },
                {
                    "color": "Tan Hide",
                    "product": {
                        "id": "3AF45568-7ADE-412F-9ED6-7A6192958C03"
                    },
                    "id": "B30F7B69-7DB2-41D9-93AF-2F61457BF700",
                    "hex": "FC9C5E",
                    "image": "tshirt-FC9C5E",
                    "updatedAt": "2023-04-11T00:00:00Z",
                    "createdAt": "2023-04-11T00:00:00Z"
                },
                {
                    "color": "Pickled Bluewood",
                    "product": {
...
            "sizes": [
                "S",
                "M",
                "L"
            ],
            "description": "This tank top offers exceptional durability and a soft and comfortable fit. The modern and versatile design features a flattering scoop neckline and a relaxed fit, making it perfect for any occasion.",
            "name": "Tank top"
        },
        {
            "category": "tops",
            "variants": [
                {
                    "product": {
                        "id": "5CBED5B5-1F8A-40DF-BFE6-0CABE27EE65B"
                    },
                    "color": "Emerald",
                    "id": "69BB4C2D-69E3-4CA8-8546-7DEDFBD9073D",
                    "hex": "4EC67C",
                    "image": "polo-4EC67C",
                    "updatedAt": "2023-04-11T00:00:00Z",
                    "createdAt": "2023-04-11T00:00:00Z"
                },
                {
                    "product": {
                        "id": "5CBED5B5-1F8A-40DF-BFE6-0CABE27EE65B"
...
            "sizes": [
                "S",
                "M",
                "L"
            ],
            "description": "The classic design features a traditional collar and button-up front, creating a sophisticated and refined look.",
            "name": "Polo shirt"
        },
        {
            "category": "tops",
            "variants": [
                {
                    "color": "Shuttle Gray",
                    "product": {
                        "id": "7D3AB13E-0FEA-426C-ACA6-EA662EB20C14"
                    },
                    "id": "847980AE-C612-47C5-A0D0-1193311A4F3E",
                    "hex": "65676C",
                    "image": "turtleneck-65676C",
                    "updatedAt": "2023-04-11T00:00:00Z",
                    "createdAt": "2023-04-11T00:00:00Z"
                },
                {
                    "color": "Blueberry",
                    "product": {
                        "id": "7D3AB13E-0FEA-426C-ACA6-EA662EB20C14"
                    },
                    "id": "F77F514C-C3E6-487F-AB96-A6158206E5E7",
                    "hex": "745EFC",
                    "image": "turtleneck-745EFC",
                    "updatedAt": "2023-04-11T00:00:00Z",
                    "createdAt": "2023-04-11T00:00:00Z"
                },
                {
                    "color": "Ghost",
                    "product": {
...
            "sizes": [
                "S",
                "M",
                "L"
            ],
            "description": "Bring some joy and positivity to your wardrobe with our cozy and stylish sweater featuring a smile design.",
            "name": "Turtleneck sweater"
        },
        {
            "category": "tops",
            "variants": [
                {
                    "color": "Chestnut Rose",
...
                "S",
                "M",
                "L",
                "XL"
            ],
            "description": "Get ready to hit the court in style with our high-quality basketball jersey.",
            "name": "Jersey"
        },
        {
            "category": "tops",
            "variants": [
                {
                    "color": "Shuttle Gray",
...
                "S",
                "M",
                "L",
                "XL"
            ],
            "description": "Made with lightweight and comfortable materials, these sundresses are designed to keep you cool and stylish all day long.",
            "name": "Sundress"
        },
        {
            "category": "dresses",
            "variants": [
                {
                    "color": "Melrose",
...
                "9",
                "10",
                "11",
                "12"
            ],
            "description": "These shoes are characterized by their low-cut design that sits below the ankle, providing a comfortable and casual look that's perfect for everyday wear.",
            "name": "Low tops"
        },
        {
            "category": "footwear",
            "variants": [
                {
                    "product": {
...
